deleted route cover photo
