# docs/swagger.json
@@ -1121,9 +1121,6 @@
                 "author_id": {
                     "type": "string"
                 },
-                "cover_photo_url": {
-                    "type": "string"
-                },
                 "created_at": {
                     "type": "string"
                 },
@@ -1177,9 +1174,6 @@
         "github_com_RecceLog_api_internal_http_dto.RouteInput": {
             "type": "object",
             "properties": {
-                "cover_photo_url": {
-                    "type": "string"
-                },
                 "description": {
                     "type": "string"
                 },
@@ -1216,9 +1210,6 @@
             "type": "object",
             "properties": {
                 "author_id": {
-                    "type": "string"
-                },
-                "cover_photo_url": {
                     "type": "string"
                 },
                 "created_at": {
